A bunch of updates --- trying to move to gipert.github.io

--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
       </span>
     </div>
     <div class="line">
-      <span class="path">pd.infn.it/~pertoldi</span>
+      <span class="path">gipert.github.io</span>
       <span class="branch"> master</span>
       <span class="command"></span>
       <span class="args"></span>
