Implement Julia language

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
       --color-variable: #F8F8F2;
       --color-expression: #F8F8F2;
       --color-storage-type: #66D9EF;
+      --color-symbol: #FC9867;
       --color-keyword: #F92672;
       --color-type: #A6E22E;
       --color-class: #A6E22E;
@@ -175,6 +176,11 @@
     .lang-ruby.step-5 .loader .args:after { content: 'in.rb'; }
     .lang-ruby.step-6 .loader .args:before { content: 'main.rb'; }
     .lang-ruby.step-7 .loader .args:before { content: 'main.rb'; }
+
+    .lang-julia.step-4 .loader .args:after { content: 'ain.jl'; }
+    .lang-julia.step-5 .loader .args:after { content: 'in.jl'; }
+    .lang-julia.step-6 .loader .args:before { content: 'main.jl'; }
+    .lang-julia.step-7 .loader .args:before { content: 'main.jl'; }
 
     .lang-javascript.step-4 .loader .args:after { content: 'ain.js'; }
     .lang-javascript.step-5 .loader .args:after { content: 'in.js'; }
