Remove arch linux symbol

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
       </span>
     </div>
     <div class="line">
-      <span class="path"> gipert.github.io</span>
+      <span class="path">gipert.github.io</span>
       <span class="branch"> master</span>
       <span class="command"></span>
       <span class="args"></span>
